*** 3.4.4 / ??

+ 1 minor enhancement:
	+ Allow session to work in view tests.

*** 3.4.3 / 2006-12-19

+ 2 minor enhancements:
        + Add assert_title and assert_h (for header).
+ 2 bug fixes:
        + Rereleased against latest version of hoe to fix load path problems.
        + Fix case ViewTestCase for case-sensitive file systems.

*** 3.4.2 / 2006-11-09

+ 2 minor enhancements:
	+ Add TextHelper for pluralize.
	+ Add deny_nil to Test::Rails.
+ 7 bug fixes:
	+ Fixed test_help's Flash. It's is a module. Oops...
	+ Don't run util_audit_assert_assigned if tests didn't pass, results will be bogus.
	+ Fixed AssertionsTest names to match what autotest expects.
	+ Fixed bug where deny_includes failed for Symbol keys.
	+ Switched autotest to use require instead of load... Why??? I don't know!!
	+ Fixed a minor but annoying whitespace difference in unit_diff.
	+ Switched argument order of assert_includes and deny_includes to match Test::Unit convention.

*** 3.4.1 / 2006-10-13

+ 3 minor enhancements:
	+ FUNDAMENTALLY changed the way failures map back to tests. This REQUIRES users of autotest to ensure that their tests and impls map 1:1 at every scoping level. I'll blog more details.
	+ Hoe'd rakefile
	+ Added support for render :collection to RenderTree.
+ 7 bug fixes:
	+ Fixed autotest tests for custom ruby names.
	+ Fixed some documentation errors in ControllerTestCase.
	+ Fixed setup in FunctionalTestCase.
	+ Allowed @assigns_ignored to contain either Symbols or Strings, bug 5233.
	+ Using Object.path2class to look up classes in helper test cases, bug 5493.
	+ Added assert_text_area, bug 5452.
	+ Renamed assert_select to assert_select_tag. Stupid rails. We were here first.

*** 3.4.0 / 2006-09-12

+ 13 minor enhancements:
	* Broke out example_dot_autotest into multiple files in lib.
	* Enhanced hook system so it can return true if event handled.
	* Sleep is now 1 second by default because life is too short.