@@ -1,7 +1,8 @@
 *** 3.4.4 / ??
 
-+ 1 minor enhancement:
++ 2 minor enhancement:
 	+ Allow session to work in view tests.
+	+ Made Rails unit tests faster with sensible defaults.
 
 *** 3.4.3 / 2006-12-19
 
